        --enable-es1370 option
    - sound input implemented in the sound lowlevel module 'linux' (ALSA / OSS)

  - LGPL'd VGABIOS updated to current CVS
    - fixed DAC palette in 8 bpp VBE and Cirrus modes (using the same palette
      as VGA mode 0x13)
    - VBE: added HDTV resolutions (patch by Tristan Schmelcher)

- SF patches applied
  [3295737] Fix CopyHost*WordLittleEndian macros by Heikki Lindholm
  [3289448] optimized powerpc byte swapping by Heikki Lindholm
  [3292581] Core Audio first aid by Heikki Lindholm
  [3205979] Compilation fixes for OpenBSD by Brad Smith
  [3290979] acpi/muldiv64 endian bug by Heikki Lindholm
  [3289459] Mac OS X audio missing framework dependency by Heikki Lindholm
  [3267459] fix xrandr related crash by Heikki Lindholm
  [3190995] add eth backend based on Slirp by Heikki Lindholm

- these S.F. bugs were closed/fixed
  [3025030] PIT mistakenly connected to IRQ0 IOAPIC instead of IRQ2
  [3266738] GUI debugger does not update CPU mode correctly
  [3292571] SB16 doesn't reinit correctly
  [3175168] Cirrus CL-GD5446 emulation incorrect
  [3260134] Failed to compile when trace cache disabled
  [3197425] Error compile with vmx in vs2008/2010 and for correct x64

-------------------------------------------------------------------------
Changes in 2.4.6 (February 22, 2011):

Brief summary :
- Support more host OS to run on:
  - Include win64 native binary in the release.
  - Fixed failures on big endian hosts.
- BIOS: Support for up to 2M ROM BIOS images.
- GUI: select mouse capture toggle method in .bochsrc.
- Ported most of Qemu's 'virtual VFAT' block driver
  (except runtime write support, but plus FAT32 suppport)
- Added write protect option for floppy drives.
- Bugfixes / improved internal debugger + instrumentation.

Detailed change log :

- CPU and internal debugger
  - Implemented Process Context ID (PCID) feature
  - Implemented FS/GS BASE access instructions support